--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="container">
 	<div class="card-white" id="introduction">
 		<h1>Hello, I'm Kaitlyn</h1>
-		<img src="images/profile.jpg" class="img-circle" width="100px" alt="Kaitlyn Howitt">
+		<img src="Images/profile.png" class="img-circle" width="100px" alt="Kaitlyn Howitt">
 		<p>
 			I am an exchange student from Toronto, Canada but study at Queens University in Kingston, Ontario. I am looking forward to this class because my home university does not offer these types of classes.
 		</p>
