--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 
 <head>
 
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163738302-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-163738302-1');
+	</script>
+
+
 	<title> Kaitlyn Howitt's Profile </title>
 
 		<meta name="description" content="This is the profile of Kaitlyn">
