--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 
 <head>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163738302-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163738302-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+  gtag('config', 'UA-163738302-1');
+</script>
 
-	  gtag('config', 'UA-163738302-1');
-	</script>
+
+
 
 
 	<title> Kaitlyn Howitt's Profile </title>
